--- a/example-application/values.yml
+++ b/example-application/values.yml
@@ -1,4 +1,8 @@
 # This file contains variables to be passed in the templates.
+app:
+  name: example-application
+
+namespace:  syself
 
 replicaCount: 1
 
@@ -6,3 +10,34 @@ image:
   repository: example-image
   pullPolicy: IfNotPresent
   tag: v1-123abc
+
+service:
+  name: http
+  type: ClusterIP
+  port: 8000
+
+ingress:
+  name: example-application-ingress
+  host: calebpokuackom-syself-devops.com
+
+resources:
+  limits:
+    cpu: 500m
+    memory: 256Mi
+  requests:
+    cpu:  250m
+    memory: 128Mi
+
+livenessProbe:
+  initialDelaySeconds: 180
+  periodSeconds: 60
+
+readinessProbe:
+  initialDelaySeconds: 180
+  periodSeconds: 60
+
+autoscaling:
+  enabled:  true
+  minReplicas:  1
+  maxReplicas:  5
+  targetMemoryUtilizationPercentage:  80
