--- a/example-application/values.yml
+++ b/example-application/values.yml
@@ -15,6 +15,8 @@ service:
   name: http
   type: ClusterIP
   port: 8000
+  secrets:
+    enabled:  true
 
 ingress:
   name: example-application-ingress
